--- a/src/ApiProxy/app/views/validate.html
+++ b/src/ApiProxy/app/views/validate.html
@@ -1,8 +1,9 @@
-﻿<h1>{{ pageTitle }}</h1>
+﻿<h1>{{ pageTitle }} : {{ sessionId }}</h1>
 
 <div class="panel-group" id="accordian">
     <div ng-repeat="case in validationCases">
-        <div class="panel panel-info">
+        <div ng-class="{ 'panel panel-success': case.Passed, 'panel panel-danger': !case.Passed }">
+            
             <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse" data-target="#panel_{{ case.UseCaseId }}">
                 <strong>
 
@@ -18,16 +19,14 @@
                     <br />
                     <ul class="list-group">
                         <li class="list-group-item" ng-repeat="item in case.Items">
-                            <span ng-class="getLabel(session.ApiResponse.IsSuccessStatusCode)">
-                                <span ng-class="getIcon(session.ApiResponse.IsSuccessStatusCode)"></span>
+                            <span ng-class="getLabel(item.Passed)">
+                                <span ng-class="getIcon(item.Passed)"></span>
                                 &nbsp;
                                 {{ item.Method }}
                             </span>&nbsp;
                             {{ item.Path }}
                         </li>
                     </ul>
-
-
                 </div>
             </div>
         </div>
